fix route css and js

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Miller + Zeigarnik</title>
-  <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href="./css/styles.css?v=2" />
 </head>
 <body>
   <header class="app">
@@ -124,6 +124,6 @@
     </section>
   </main>
 
-  <script src="js/app.js" defer></script>
+  <script src="./js/app.js?v=2" defer></script>
 </body>
 </html>
